fixed positioned elements need a z-index for allowing background color

--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -3,5 +3,5 @@
 }
 
 .column{
-	background-color: transparent;
+	background-color: #ccc;
 }
